# momentary

./: Cargo.toml  Rocket.toml
migrations/: 0001_create_tables.sql  20240326102500-init.sql
src/: main.rs  momentary.rs  services.rs  template.rs
src/services/: autocomplete_tags.rs  create_moment.rs  feed.rs  feed_by_tag.rs
templates/: base.html  base.html.tera  error.html  error.html.tera  index.html  index.html.tera
templates/autocomplete/: tags.html
templates/css/: autocomplete.html  base.html.tera  moment.html  moment.html.tera
templates/js/: htmx-autocomplete.html  htmx-local-storage.html  utils.html.tera
templates/moment/: article.html  article.html.tera  create.html  create.html.tera  form.html.tera
