[package]
name = "momentary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
regex = "1.10.4"
rocket = "0.5.0"
serde = "1.0.197"
serde_json = "1.0.115"
tera = "1.19.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]
