[package]
name = "momentary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.35"
regex = "1.10.4"
serde = "1.0.197"
serde_json = "1.0.115"
tera = "1.19.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-async-std", "sqlite", "macros", "migrate"]
